RESOLVED FIXED 243721
[WinCairo][GraphicsLayerWC] missing tiles after animation
https://bugs.webkit.org/show_bug.cgi?id=243721
Summary [WinCairo][GraphicsLayerWC] missing tiles after animation
Fujii Hironori
Reported 2022-08-09 00:43:20 PDT
[WinCairo][GraphicsLayerWC] missing tiles after animation 1. Start WinCairo MiniBrowser 2. Enable LBSE: Menu → Develop → Internal Debug Features → Layer Based SVG Engine 3. Go to https://blogs.igalia.com/nzimmermann/posts/2019-12-12-3d-transformations/presentations/css3d-presentation.html#p4 4. Click "WELCOME TO THE FUTURE :-)" to start the animation Actual: Some layer disappears after the animation
Attachments
Patch (2.54 KB, patch)
2022-08-09 00:54 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2022-08-09 00:54:36 PDT
Fujii Hironori
Comment 2 2022-08-09 15:07:49 PDT
Comment on attachment 461501 [details] Patch Thank you.
EWS
Comment 3 2022-08-09 15:51:32 PDT
Committed 253274@main (8e1fe7c0e328): <https://commits.webkit.org/253274@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461501 [details].
Radar WebKit Bug Importer
Comment 4 2022-08-09 15:52:19 PDT
Note You need to log in before you can comment on or make changes to this bug.